2012-02-05  Paolo Bonzini  <bonzini@gnu.org>
            Jim Hill  <gjthill@gmail.com>

	* autoboot.conf: Change getline to getdelim.
	* doc/sed-in.texi: Document -z/--null-data.
	* doc/sed.texi: Regenerate.
	* doc/sed.1: Regenerate.
	* sed/execute.c: Change '\n' to buffer_delimiter.
	* sed/sed.c: Add support for -z/--null-data.
	* sed/sed.h: Add buffer_delimiter.
	* sed/utils.c: Change ck_getline to ck_getdelim.
	* sed/utils.h: Change ck_getline to ck_getdelim.
	* NEWS: Document new option.

2011-11-23  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Document how multiline mode affects matching
	newlines against period.  Reported by Dmitry Bolshakov.

2011-08-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/sed.c (usage): Fix documentation for -i.  Reported by
	Dennis Bartlett.

2011-07-11  Jim Meyering  <meyering@redhat.com>

	avoid silent data loss when an input line is 2^31 bytes or longer
	If one line in a file has length (including newline) of 2^31, then
	applying sed -i to that file truncates it to size 0.  I first
	noticed it like this: Create a file with line of length 2^31-1
	  $ perl -le 'print "v"x(2**31-1)' > k
	Then prepend a byte to that line:
	  $ sed -i 's/^/v/' k
	Surprise!  The file is empty.
	* sed/utils.c (ck_getline): Declare "result" to be of type ssize_t,
	rather than int, to match the return type of getline.

2011-07-14  Padraig Brady  <p@draigbrady.com>

	* execute.c (open_next_file): Only reopen stdin on Windows/DOS.

2011-05-27  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Explain behavior of \l and \u at the end
	of the replacement text.
	* doc/sed.texi: Regenerate.
	* sed/execute.c (append_replacement, do_subst): Further
	simplification.

2011-05-27  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Fix incorrect comment in the "Increment a
	number" example.  Reported by Wu Liang and Micah Cowan.
	* doc/sed.texi: Regenerate.

2011-03-11  Paolo Bonzini  <bonzini@gnu.org>
